[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Chandan Kumar <chandancse.iitgn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.96.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
