[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Chandan Kumar <chandancse.iitgn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.96.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
